Add a line to trend analysis plot to show the mean

--- a/Notebook/spotify_analysis.ipynb
+++ b/Notebook/spotify_analysis.ipynb
@@ -4208,7 +4208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -4277,11 +4277,38 @@
         }
        ],
        "layout": {
+        "annotations": [
+         {
+          "showarrow": false,
+          "text": "Mean: 875.33 hours",
+          "x": 1,
+          "xanchor": "right",
+          "xref": "x domain",
+          "y": 875.3281727380953,
+          "yanchor": "bottom",
+          "yref": "y"
+         }
+        ],
         "barmode": "relative",
         "height": 500,
         "legend": {
          "tracegroupgap": 0
         },
+        "shapes": [
+         {
+          "line": {
+           "color": "blue",
+           "dash": "dot"
+          },
+          "type": "line",
+          "x0": 0,
+          "x1": 1,
+          "xref": "x domain",
+          "y0": 875.3281727380953,
+          "y1": 875.3281727380953,
+          "yref": "y"
+         }
+        ],
         "template": {
          "data": {
           "bar": [
@@ -5161,6 +5188,12 @@
     "fig = px.bar(trends_by_day, x='ts', y='ms_played',\n",
     "             labels={'ms_played': 'Total Streaming Time (Hours)', 'ts': 'Day of the Week'},\n",
     "             title='Streaming Trends by Day of the Week')\n",
+    "\n",
+    "mean_trends_by_day = trends_by_day['ms_played'].mean()\n",
+    "fig.add_hline(y=mean_trends_by_day, \n",
+    "              line_dash=\"dot\", line_color=\"blue\", \n",
+    "              annotation_text=f'Mean: {mean_trends_by_day:.2f} hours',\n",
+    "              annotation_position=\"top right\")\n",
     "\n",
     "colors = ['green' if i in top_days else '#16D35C' for i in trends_by_day.index]\n",
     "fig.update_traces(marker_color=colors,\n",
@@ -6233,7 +6266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -6302,11 +6335,38 @@
         }
        ],
        "layout": {
+        "annotations": [
+         {
+          "showarrow": false,
+          "text": "Mean: 835.66 hours",
+          "x": 1,
+          "xanchor": "right",
+          "xref": "x domain",
+          "y": 835.6646065079366,
+          "yanchor": "bottom",
+          "yref": "y"
+         }
+        ],
         "barmode": "relative",
         "height": 500,
         "legend": {
          "tracegroupgap": 0
         },
+        "shapes": [
+         {
+          "line": {
+           "color": "blue",
+           "dash": "dot"
+          },
+          "type": "line",
+          "x0": 0,
+          "x1": 1,
+          "xref": "x domain",
+          "y0": 835.6646065079366,
+          "y1": 835.6646065079366,
+          "yref": "y"
+         }
+        ],
         "template": {
          "data": {
           "bar": [
@@ -7188,8 +7248,13 @@
     "             labels={'ms_played': 'Total Streaming Time (Hours)', 'ts': 'Day of the Week'},\n",
     "             title='Streaming Trends by Day of the Week')\n",
     "\n",
-    "colors = ['green' if i in top_days else '#16D35C' for i in trends_by_day.index]\n",
+    "mean_trends_by_day = trends_by_day['ms_played'].mean()\n",
+    "fig.add_hline(y=mean_trends_by_day, \n",
+    "              line_dash=\"dot\", line_color=\"blue\", \n",
+    "              annotation_text=f'Mean: {mean_trends_by_day:.2f} hours',\n",
+    "              annotation_position=\"top right\")\n",
     "\n",
+    "colors = ['green' if i in top_days else '#16D35C' for i in trends_by_day.index]\n",
     "fig.update_traces(marker_color=colors,\n",
     "                  text=trends_by_day['ms_played'].round(2), \n",
     "                  textposition='inside', \n",
@@ -8275,7 +8340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -8344,11 +8409,38 @@
         }
        ],
        "layout": {
+        "annotations": [
+         {
+          "showarrow": false,
+          "text": "Mean: 39.69 hours",
+          "x": 1,
+          "xanchor": "right",
+          "xref": "x domain",
+          "y": 39.68916063492063,
+          "yanchor": "bottom",
+          "yref": "y"
+         }
+        ],
         "barmode": "relative",
         "height": 500,
         "legend": {
          "tracegroupgap": 0
         },
+        "shapes": [
+         {
+          "line": {
+           "color": "blue",
+           "dash": "dot"
+          },
+          "type": "line",
+          "x0": 0,
+          "x1": 1,
+          "xref": "x domain",
+          "y0": 39.68916063492063,
+          "y1": 39.68916063492063,
+          "yref": "y"
+         }
+        ],
         "template": {
          "data": {
           "bar": [
@@ -9230,8 +9322,14 @@
     "             labels={'ms_played': 'Total Streaming Time (Hours)', 'ts': 'Day of the Week'},\n",
     "             title='Streaming Trends by Day of the Week')\n",
     "\n",
-    "colors = ['green' if i in top_days else '#16D35C' for i in trends_by_day.index]\n",
+    "# Add a line to show the mean   \n",
+    "mean_trends_by_day = trends_by_day['ms_played'].mean()\n",
+    "fig.add_hline(y=mean_trends_by_day, \n",
+    "              line_dash=\"dot\", line_color=\"blue\", \n",
+    "              annotation_text=f'Mean: {mean_trends_by_day:.2f} hours',\n",
+    "              annotation_position=\"top right\")\n",
     "\n",
+    "colors = ['green' if i in top_days else '#16D35C' for i in trends_by_day.index]\n",
     "fig.update_traces(marker_color=colors,\n",
     "                  text=trends_by_day['ms_played'].round(2), \n",
     "                  textposition='inside', \n",
