--- a/Notebook/spotify_analysis.ipynb
+++ b/Notebook/spotify_analysis.ipynb
@@ -84,6 +84,7 @@
     "import pandas as pd\n",
     "import plotly.express as px\n",
     "import plotly.graph_objects as go\n",
+    "# import plotly.io as pio\n",
     "import warnings"
    ]
   },
@@ -93,7 +94,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "warnings.filterwarnings(\"ignore\")"
+    "warnings.filterwarnings(\"ignore\")\n",
+    "# pio.kaleido.scope.default_format = \"svg\""
    ]
   },
   {
